--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <style>
-    form { border: 3px solid #f1f1f1; }
+    form {
+        border: 3px solid #f1f1f1;
+    }
+
     input[type=text],
     input[type=password] {
         width: 100%;
@@ -11,6 +14,7 @@
         border: 1px solid #ccc;
         box-sizing: border-box;
     }
+
     button {
         background-color: #4CAF50;
         color: white;
@@ -20,38 +24,49 @@
         cursor: pointer;
         width: 100%;
     }
-    button:hover { opacity: 0.8; }
+
+    button:hover {
+        opacity: 0.8;
+    }
+
     .cancelbtn {
         width: auto;
         padding: 10px 18px;
         background-color: #f44336;
     }
+
     .imgcontainer {
         text-align: center;
         margin: 24px 0 12px 0;
     }
+
     img.avatar {
         width: 40%;
         border-radius: 50%;
     }
-    .container { padding: 16px; }
+
+    .container {
+        padding: 16px;
+    }
+
     span.psw {
         float: right;
         padding-top: 16px;
     }
+
     @media screen and (max-width: 300px) {
         span.psw {
             display: block;
             float: none;
         }
-        .cancelbtn { width: 100%;}
+        .cancelbtn {
+            width: 100%;
+        }
     }
 </style>
 
 <body>
-
     <h2>Login Page</h2>
-
     <form name="login" action="/login" method="post">
         <div class="container">
             <label><b>Username</b></label>
@@ -63,8 +78,6 @@
             <button type="submit">Login</button>
         </div>
     </form>
-    <!-- <a href="/oauth/facebook">Log in with Facebook</a><br>
-    <a href="/oauth/google">Log in with Google</a> -->
-
 </body>
+
 </html>
