--- a/app/views/login.html
+++ b/app/views/login.html
@@ -78,6 +78,9 @@
             <button type="submit">Login</button>
         </div>
     </form>
+
+    <a href="/oauth/google">Log in with Google</a>
+    
 </body>
 
 </html>
