--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Hi</h1>
+    <h1>Hi! <%= username %> </h1>    
     <form id="logout" method="post" action="/logout">
         <input type="submit" value="Logout" />
     </form>
